# crypto-mm-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/analytics/: backtest_metrics.py  inventory.py  performance_report.py  pnl.py
app/api/: routes.py
app/config/: settings.py
app/core/: __init__.py  protocols.py
app/execution/: fee_model.py  fill_model.py  gas_model.py  paper_broker.py  quote_ids.py  tick_ids.py
app/market_data/: amm_pool.py  amm_types.py  normalizer.py  orderbook.py  (+1 more)
docs/: architecture.md  design-decisions.md
notebooks/: dex_cex_comparison.ipynb
scripts/: build_portfolio_assets.py  run_backtest.py  run_mm.py
tests/: conftest.py  test_amm_pool.py  test_api_fills_pnl.py  test_api_lifecycle.py  test_api_tick_audit.py  test_arbitrage_scanner.py  test_backtest_metrics.py  test_backtest_runner.py  test_ccxt_adapter.py  test_database.py  test_domain.py  test_fill_model.py  test_fills_pnl_repository.py  test_gas_model.py  test_inventory.py  test_inventory_skew_strategy.py  test_load_snapshots.py  test_market_maker_opportunities.py  test_market_maker_recovery.py  test_opportunities_repository.py  test_orderbook.py  test_paper_broker_apply_fills.py  test_paper_broker_partial_fill.py  test_pnl.py  test_protocols.py  test_pure_mm_strategy.py  test_quote_audit.py  test_repository.py  test_risk_limits.py  test_rolling_volatility.py  test_settings.py  test_tick_persistence.py  test_volatility_spread_strategy.py  test_web3_adapter.py
(+24 files in other folders)
